// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> when \`inputType\` prop is "checkbox" when no props are passed should match the snapshot 1`] = `
<div>
  <div
    class="icheckbox"
  >
    <input
      style="opacity: 0; position: absolute;"
      type="checkbox"
      value=""
    />
    <ins
      class="iCheck-helper"
      role="presentation"
      style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
    />
  </div>
</div>
`;

exports[`<Input /> when \`inputType\` prop is "radio" when no props are passed should match the snapshot 1`] = `
<div>
  <div
    class="iradio"
  >
    <input
      style="opacity: 0; position: absolute;"
      type="radio"
      value=""
    />
    <ins
      class="iCheck-helper"
      role="presentation"
      style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
    />
  </div>
</div>
`;
